# ai-bootcamp-codespace

./: README.md  pyproject.toml
Week1/: env-test.ipynb  keep-ai-conversation.ipynb  rag.ipynb  youtube.ipynb
Week1/Homework/: datatalks-podcasts.ipynb
Week1/Homework/Books/: Books.ipynb
Week1/Homework/Books/books_text/: PhysicalModelingInMatlab4.md  Think-C.md  physical_modeling_in_matlab.md  think_c++.md  think_complexity_2e.md  think_dsp.md  think_java_2e.md  think_os.md  think_python_2e.md  thinkcomplexity2.md  thinkdsp.md  thinkjava2.md  thinkos.md  thinkpython2.md
Week2/: agentic-rag.ipynb  agents-toyAIKit.ipynb  github-documentation.ipynb  homework-week2.ipynb
Week2/.ipynb_checkpoints/: homework-week2-checkpoint.ipynb
