[project]
name = "ai-bootcamp-codespace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "gitsource>=0.0.4",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "markdown>=3.9",
    "markdown-it-py>=4.0.0",
    "markitdown[pdf]>=0.1.4",
    "minsearch>=0.0.7",
    "openai>=2.3.0",
    "openai-agents>=0.4.2",
    "pymupdf>=1.26.7",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "tiktoken>=0.12.0",
    "toyaikit>=0.0.5",
    "tqdm>=4.67.1",
    "youtube-transcript-api>=1.2.3",
]
